# shiny-rocks

./: .gitignore  Cargo.toml  README.md
src/: main.rs  shiny_thing.rs
