[package]
name = "web-project"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
getrandom = { version = "0.2.7", features = ["js"] }
rand = "0.8.5"
reqwest = "0.11.11"
scraper = "0.13.0"
thiserror = "1.0.33"
urlencoding = "2.1.0"
wasm-bindgen-futures = "0.4.32"
yew = "0.19.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
